# mcp-server

./: .bazelrc  .env.example  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  QUICKSTART.md  README.md  WORKSPACE  bazel.sh  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: ci.yml
cmd/server/: BUILD.bazel  main.go
internal/config/: BUILD.bazel  config.go
internal/github/: BUILD.bazel  client.go  client_test.go
internal/resource/: BUILD.bazel  adapter.go  adapter_test.go
internal/server/: BUILD.bazel  server.go  server_test.go
tests/: BUILD.bazel  integration_test.go
