"""
GitHub Starred Repos MCP Server
Bazel module configuration using bzlmod
"""

module(
    name = "mcp-server",
    version = "1.0.0",
)

# Go SDK and rules - using compatible versions
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Go SDK configuration - use Go 1.24.x for compatibility
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All Go dependencies
use_repo(
    go_deps,
    "com_github_google_go_github_v57",
    "com_github_mark3labs_mcp_go",
    "org_golang_x_oauth2",
    "org_uber_go_fx",
    "org_uber_go_zap",
    "org_uber_go_dig",
    "org_uber_go_multierr",
)
