load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/timduly4/mcp-server/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/github",
        "//internal/resource",
        "//internal/server",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

# Alias for convenience
alias(
    name = "mcp-server",
    actual = ":server",
    visibility = ["//visibility:public"],
)
