load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "github",
    srcs = ["client.go"],
    importpath = "github.com/timduly4/mcp-server/internal/github",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v57//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "github_test",
    srcs = ["client_test.go"],
    embed = [":github"],
)
