load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/timduly4/mcp-server/internal/server",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/resource",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_mark3labs_mcp_go//server",
    ],
)
